Navigation menu: Fix alignment, background color, and font size. (#32)
* Navigation menu: Fix alignment, background color, and font size.

* Update search font size, fix dropdown background colors

* Fix menu alignment on desktop size screens

* Search container should be darker grey on large screens too

* Remove duplicate border

* Fix background color of icon button

* Set font size explicitly to 21px/13px

* Fix responsive menu script

- Last item in the list should not account for the … menu when looking at available space
- Run the resizing when the screen comes out of mobile/isResponsive mode to avoid glitches
- Assorted code-style cleanup

* Navigation script: Only tally the width of the top-level menu items

--- a/mu-plugins/blocks/global-header-footer/postcss/common.pcss
+++ b/mu-plugins/blocks/global-header-footer/postcss/common.pcss
@@ -31,9 +31,7 @@
 }
 
 .wp-block-group.global-header,
-.wp-block-group.global-footer,
-.wp-block-group.global-header .wp-block-navigation:not(.has-background) .wp-block-navigation__responsive-container,
-.wp-block-navigation:not(.has-background) .wp-block-navigation__submenu-container {
+.wp-block-group.global-footer {
 	--active-menu-item-border-height: 4px;
 
 	background-color: var(--wp--preset--color--dark-grey);
@@ -42,6 +40,18 @@
 
 .wp-block-group.global-header .global-header__navigation,
 .wp-block-group.global-header .global-header__search {
+	&:not(.has-background) .wp-block-navigation__responsive-container,
+	&:not(.has-background) .wp-block-navigation__submenu-container {
+		background-color: var(--wp--preset--color--darker-grey);
+		color: var(--wp--preset--color--white);
+		font-size: 21px;
+
+		@media (--tablet) {
+			background-color: var(--wp--preset--color--dark-grey);
+			font-size: 13px;
+		}
+	}
+
 	& .wp-block-navigation__responsive-container:not(.is-menu-open) {
 		display: none; /* Gutenberg has the menu hardcoded to open at 600px, but we need it to wait until `--tablet`. */
 
