--- a/mu-plugins/blocks/global-header-footer/postcss/header/header.pcss
+++ b/mu-plugins/blocks/global-header-footer/postcss/header/header.pcss
@@ -1,6 +1,6 @@
 .wp-block-group.global-header {
 	display: flex;
-	align-items: center;
+	align-items: flex-end;
 	font-size: 21px;
 
 	@media (--tablet) {
@@ -9,15 +9,28 @@
 
 	& > * {
 		flex-shrink: 0;
-		padding-top: 60px;
-		padding-bottom: 17px;
-		padding-right: var(--wp--style--block-gap);
-		padding-left: var(--wp--style--block-gap);
+		padding: 60px var(--wp--style--block-gap) 17px;
 		margin: 0 auto;
 
 		@media (--tablet) {
 			padding-top: 37px;
 			padding-bottom: 37px;
+		}
+	}
+
+	& .global-header__search,
+	& .global-header__navigation {
+		padding: 0;
+
+		& .wp-block-navigation__responsive-container-open {
+
+			/* Magic numbers to center the 24px icon in 117px height. */
+			padding: 70px var(--wp--style--block-gap) 23px;
+
+			@media (--tablet) {
+				padding-top: 37px;
+				padding-bottom: 37px;
+			}
 		}
 	}
 
@@ -41,10 +54,10 @@
 		position: fixed;
 		right: 0;
 		top: var(--wp-admin--admin-bar--height, 0);
-		padding-bottom: 24px;
-		padding-left: var(--wp--style--block-gap);
+		padding-top: 70px; /* Magic numbers to center the 24px icon in 117px height. */
 		padding-right: calc(var(--wp--style--block-gap) + var(--wp--custom--alignment--scroll-bar-width));
-		padding-top: 63px;
-		background-color: #1c2024;
+		padding-bottom: 23px; /* Magic numbers to center the 24px icon in 117px height. */
+		padding-left: var(--wp--style--block-gap);
+		background-color: var(--wp--preset--color--darker-grey);
 	}
 }
