--- a/mu-plugins/blocks/global-header-footer/postcss/header/logos.pcss
+++ b/mu-plugins/blocks/global-header-footer/postcss/header/logos.pcss
@@ -1,11 +1,8 @@
 .wp-block-group.global-header {
 	& .global-header__wporg-logo-mark,
 	& .global-header__wporg-logo-full {
-		border-right: 1px solid var(--wp--preset--color--darker-grey);
-
 		@media (--tablet) {
-			padding-top: 34px;
-			padding-bottom: 28px;
+			border-right: 1px solid var(--wp--preset--color--darker-grey);
 		}
 	}
 
